--- a/FirebaseTest/Info.plist
+++ b/FirebaseTest/Info.plist
@@ -70,5 +70,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>写真をuploadします</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>写真をuploadします</string>
 </dict>
 </plist>
